--- a/src/ToDoList/Views/Items/Create.cshtml
+++ b/src/ToDoList/Views/Items/Create.cshtml
@@ -1,11 +1,10 @@
-﻿@{
+﻿@{  ViewData["Title"] = "To Do List";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @model ToDoList.Models.Item
 
 <html>
-<head>
-    <title>To Do List - Create</title>
-</head>
+
 <body>
     <h2>Create</h2>
     <hr />
