--- a/src/ToDoList/Views/Items/Delete.cshtml
+++ b/src/ToDoList/Views/Items/Delete.cshtml
@@ -1,11 +1,11 @@
 ﻿@{
+    ViewData["Title"] = "To Do List";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @model ToDoList.Models.Item
 
 <html>
-<head>
-    <title>To Do List - Delete</title>
-</head>
+
 <body>
 
     <h2>Are you sure you want to delete this?</h2>
