--- a/src/ToDoList/Views/Items/Edit.cshtml
+++ b/src/ToDoList/Views/Items/Edit.cshtml
@@ -1,11 +1,11 @@
 ﻿@{
+    ViewData["Title"] = "To Do List";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @model ToDoList.Models.Item
 
 <html>
-<head>
-    <title>To Do List - Edit</title>
-</head>
+
 <body>
     <h2>Edit</h2>
     <hr />
