--- a/src/ToDoList/Views/Items/Index.cshtml
+++ b/src/ToDoList/Views/Items/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@{
+    ViewData["Title"] = "To Do List";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @model IEnumerable<ToDoList.Models.Item>
 
 <html>
-<head>
-    <title>To Do List</title>
-</head>
+
 <body>
     <h2>To Do List</h2>
     <hr />
