add a home button

--- a/src/ToDoList/Views/Items/Index.cshtml
+++ b/src/ToDoList/Views/Items/Index.cshtml
@@ -17,5 +17,6 @@
         }
     </ul>
     <p>@Html.ActionLink("Add new item", "Create")</p>
+    <p>@Html.ActionLink("to Home", "../Home/Index")</p>
 </body>
 </html>
