--- a/src/ToDoList/Views/Home/Index.cshtml
+++ b/src/ToDoList/Views/Home/Index.cshtml
@@ -7,6 +7,6 @@
 <body>
     <h2>Welcome to the To Do List!</h2>
 
-    <p>@Html.ActionLink("View Item List", "../Items/Index")</p>
+    <p>@Html.ActionLink("View Item List", "Index", "Items")</p>
 </body>
 </html>
