--- a/src/ToDoList/Views/Items/Delete.cshtml
+++ b/src/ToDoList/Views/Items/Delete.cshtml
@@ -3,18 +3,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @model ToDoList.Models.Item
-
-<html>
-
-<body>
-
-    <h2>Are you sure you want to delete this?</h2>
-    <hr />
-    @Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)
-    @using (Html.BeginForm())
-    {
-        <input type="submit" value="Delete" />
-    }
-    @Html.ActionLink("Back to List", "Index")
-</body>
-</html>
+<h2>Are you sure you want to delete this?</h2>
+<hr />
+@Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)
+@using (Html.BeginForm())
+{
+    <input type="submit" value="Delete" />
+}
+<p>@Html.ActionLink("Back to list", "Index")</p>
