--- a/src/ToDoList/Views/Items/Details.cshtml
+++ b/src/ToDoList/Views/Items/Details.cshtml
@@ -3,13 +3,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @model ToDoList.Models.Item
+<h2>Item Details</h2>
+<hr />
 
-<html>
+<p>@Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)</p>
+<p>@Html.DisplayNameFor(model => model.CategoryId) : @Html.DisplayFor(model => model.CategoryId)</p>
 
-<body>
-    <h2>Details</h2>
-    <hr />
-    @Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)
-    <p>@Html.ActionLink("Back to list", "Index")</p>
-</body>
-</html>
+<p>@Html.DisplayNameFor(model => model.CategoryId): @ViewBag.Category.Name</p>
+
+<p>@Html.ActionLink("Edit", "Edit", new { id = Model.ItemId }) | @Html.ActionLink("Back to List", "Index")</p>
