--- a/src/ToDoList/Views/Items/Edit.cshtml
+++ b/src/ToDoList/Views/Items/Edit.cshtml
@@ -3,24 +3,19 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @model ToDoList.Models.Item
+<h2>Edit</h2>
+<hr />
+<h4>Edit this item: @Html.DisplayFor(model => model.Description)</h4>
+@using (Html.BeginForm())
+{
+    @Html.HiddenFor(model => model.ItemId)
 
-<html>
+    @Html.LabelFor(model => model.Description)
+    @Html.EditorFor(model => model.Description)
 
-<body>
-    <h2>Edit</h2>
-    <hr />
-    <h4>Edit this task: @Html.DisplayFor(model => model.Description)</h4>
+    @Html.LabelFor(model => model.CategoryId)
+    @Html.DropDownList("CategoryId")
 
-    @using (Html.BeginForm())
-    {
-        @Html.HiddenFor(model => model.ItemId)
-
-        @Html.LabelFor(model => model.Description)
-        @Html.EditorFor(model => model.Description)
-
-        <input type="submit" value="Save" />
-    }
-    <p>@Html.ActionLink("Back to list", "Index")</p>
-
-</body>
-</html>
+    <input type="submit" value="Save" class="btn btn-default" />
+}
+@Html.ActionLink("Back to List", "Index")
