pass tests that use moq and test database.

--- a/src/ToDoList/Views/Items/Create.cshtml
+++ b/src/ToDoList/Views/Items/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@{  ViewData["Title"] = "To Do List";
+﻿@{  
+    ViewData["Title"] = "To Do List";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @model ToDoList.Models.Item
